--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <img src="./assets/images/gift.gif" class="object-cover" id="box">
         </div>
         <div class="fixed rounded-xl shadow-lg text-white p-5 transition-all duration-300 ease-in-out" id="msg-box">
+            <span class="right-5 absolute" id="close">close</span>
             <div class="flex flex-row items-center justify-between h-full">
                 <i class="fi fi-br-angle-circle-left text-2xl" id="prev"></i>
-                <p id="msg"></p>   
+                <p id="msg" class="p-5 text-center"></p>   
                 <i class="fi fi-br-angle-circle-right text-2xl" id="next"></i>
             </div>
         </div>
